--- a/styles/desktop.css
+++ b/styles/desktop.css
@@ -1,3 +1,7 @@
+body {
+  cursor: url('/cursors/win98-arrow.cur'), default;
+}
+
 .desktop {
   position: fixed;
   top: 0;
@@ -15,7 +19,7 @@
   text-align: center;
   font-family: Tahoma, sans-serif;
   color: white;
-  cursor: pointer;
+  cursor: url("/cursors/win98-click.cur"), pointer;
 }
 
 .icon-title {
@@ -68,7 +72,7 @@
   font-family: Tahoma, sans-serif;
   font-size: 12px;
   height: 22px;
-  cursor: pointer;
+  cursor: url("/cursors/win98-click.cur"), pointer;
   gap: 2px;
 }
 
