--- a/styles/desktop.css
+++ b/styles/desktop.css
@@ -2,6 +2,10 @@ body {
   cursor: url('/cursors/win98-arrow.cur'), default;
 }
 
+body.loading {
+  cursor: url("/cursors/win98-loading.cur"), wait !important;
+}
+
 .desktop {
   position: fixed;
   top: 0;
@@ -19,7 +23,6 @@ body {
   text-align: center;
   font-family: Tahoma, sans-serif;
   color: white;
-  cursor: url("/cursors/win98-click.cur"), pointer;
 }
 
 .icon-title {
@@ -67,7 +70,7 @@ body {
   align-items: center;
   background: #dcdcdc;
   border: 2px outset white;
-  padding: 2px 8px;
+  padding: 2px 2px;
   font-weight: bold;
   font-family: Tahoma, sans-serif;
   font-size: 12px;
